# pionsrv

./: .gitignore  README.md  pyproject.toml
scripts/: commands.txt  drones_config.json  test_visual.py
src/pionsrv/: control_server.py  gui.py  main.py
