[project]
name = "pionsrv"
version = "0.0.1"
description = "App to control drones"
requires-python = ">=3.10"
authors = [
    {name = "Michael", email = "onisoris@yandex.ru"},
]
maintainers = [
    {name = "Michael", email = "onisoris@yandex.ru"}
]
dependencies = [
    "pionsdk @ git+https://github.com/OnisOris/pion@dev",
    "matplotlib",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Independent Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/OnisOris/pionsrv"
Documentation = "https://onisoris.github.io/pionsrv"
Repository = "https://github.com/OnisOris/pionsrv.git"
Issues = "https://github.com/OnisOris/pionsrv/issues"
pionsrv = "https://github.com/OnisOris/pionsrv"

[project.scripts]
start_control_server = "pionsrv.control_server:main"

